# eval_odometry

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindGnuplot.cmake
data/: Frame_Jul_14_14_15_59.txt  gps_Jul_14_14_16_00.txt
eval_data/gt/: 01.txt
eval_data/results/: stats.txt
eval_data/results/data/: 01.txt  02.txt  03.txt
eval_data/results/errors/: 01.txt
eval_data/results/plot_error/: 01_rl.eps  01_rl.txt  01_tl.eps  01_tl.txt  avg_rl.eps  avg_tl.eps  avg_tl.txt
eval_data/results/plot_path/: 01.eps  01.gp  01.txt
include/: mail.h  matrix.h
script/: draw_pose_animation.py  draw_results.py  evaluate_2.py  evaluate_2_align.py  evaluate_3.py  evaluate_ate.py  evaluate_real.py  kitt_normtime.py  kitti_addtime.py
src/: evaluate.cpp  evaluate_custom.cpp  evaluate_kitti.cpp  evaluate_kitti_time.cpp  matrix.cpp
